--- a/ts-template/package.json
+++ b/ts-template/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build:with-deps": "parcel build src/index.ts  --experimental-scope-hoisting",
-    "build": "tsc",
+    "build": "tsc && cp src/plugin.json dist/plugin.json",
     "test": "jest",
     "test:watch:": "jest --watch",
     "type-check": "tsc --noEmit",
@@ -37,9 +37,6 @@
     "ts-jest": "^25.4.0",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.1.0"
-  },
-  "dependencies": {
-    "date-fns": "^2.20.2"
   },
   "jest": {
     "preset": "ts-jest",
