--- a/nmn.sweep/package.json
+++ b/nmn.sweep/package.json
@@ -7,14 +7,26 @@
     "@babel/core": "^7.14.2",
     "@babel/eslint-parser": "^7.14.3",
     "@babel/preset-flow": "^7.13.13",
+    "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-commonjs": "^19.0.0",
+    "@rollup/plugin-node-resolve": "^13.0.0",
     "eslint": "^7.26.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-flowtype": "^5.7.2",
     "eslint-plugin-import": "^2.23.2",
     "flow-bin": "^0.151.0",
-    "prettier": "^2.3.0"
+    "prettier": "^2.3.0",
+    "rollup": "^2.48.0"
   },
   "scripts": {
-    "build": "babel src/script.js -o script.js"
+    "build": "rollup -c ./rollup.config.js",
+    "watch": "rollup -c ./rollup.config.js --watch"
+  },
+  "prettier": {
+    "printWidth": 80,
+    "parser": "flow",
+    "semi": true,
+    "trailingComma": "all",
+    "singleQuote": true
   }
 }
