Made SweepAll work again - Shows and confirms every change as you make it. - Rest of the options are still present.

--- a/nmn.sweep/.eslintrc
+++ b/nmn.sweep/.eslintrc
@@ -54,7 +54,8 @@
     "DataStore": true,
     "CommandBar": true,
     "Calendar": true,
-    "CalendarItem": true
+    "CalendarItem": true,
+    "globalThis": true
   },
   "ignorePatterns": [
     "node_modules",
