Added more documentation and scripts - Explaining how npm scripts work - Adding new scripts for linting and typechecking

--- a/nmn.sweep/package.json
+++ b/nmn.sweep/package.json
@@ -20,7 +20,10 @@
   },
   "scripts": {
     "build": "rollup -c ./rollup.config.js",
-    "watch": "rollup -c ./rollup.config.js --watch"
+    "watch": "rollup -c ./rollup.config.js --watch",
+    "lint": "eslint src",
+    "typecheck": "flow check",
+    "test": "yarn run lint && yarn run typecheck"
   },
   "prettier": {
     "printWidth": 80,
