Global config - moved to using just NPM, no more yarn - Moved dependencies and build steps to top-level - Every package gets linting and prettier - You can opt into typechecking by adding // @flow - Will add automatic usage of rollup next

--- a/.eslintrc
+++ b/.eslintrc
@@ -55,11 +55,12 @@
     "CommandBar": true,
     "Calendar": true,
     "CalendarItem": true,
-    "globalThis": true
+    "globalThis": true,
+    "Clipboard": true,
+    "fetch": true
   },
   "ignorePatterns": [
     "node_modules",
-    "dist",
-    "script.js"
+    "nmn.sweep/script.js"
   ]
 }
