--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "scripts": {
     "build": "rollup -c ./rollup.config.js",
     "watch": "rollup -c ./rollup.config.js --watch",
-    "lint": "eslint src",
+    "lint": "eslint .",
     "typecheck": "flow check",
     "test": "yarn run lint && yarn run typecheck"
   },
