A fully featured templating engine. - Everything but weather works. - Using weather just means you have to fill the value yourself.

--- a/package.json
+++ b/package.json
@@ -39,5 +39,10 @@
     "semi": true,
     "trailingComma": "all",
     "singleQuote": true
+  },
+  "dependencies": {
+    "json5": "^2.2.0",
+    "toml": "^3.0.0",
+    "yaml": "^1.10.2"
   }
 }
