Update to tooling config files for jgclark plugins

--- a/jgclark.DailyJournal/.eslintrc
+++ b/jgclark.DailyJournal/.eslintrc
@@ -18,6 +18,9 @@
     }
   },
   "rules": {
+    "prefer-template": "warn",
+    "eqeqeq": ["error", "smart"],
+    "semi": ["never"],
     "curly": ["error", "multi-line"],
     "linebreak-style": ["error", "unix"],
     "max-len": [
