--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   "prettier": {
     "printWidth": 80,
     "parser": "flow",
-    "semi": true,
+    "semi": false,
     "trailingComma": "all",
     "singleQuote": true
   },
