V1 of new Templates plugin is complete. - Added newNote command - Update the command names to match (it, nn) - Removed old version of the plugin

--- a/.eslintrc
+++ b/.eslintrc
@@ -20,7 +20,7 @@
   "rules": {
     "prefer-template": "warn",
     "eqeqeq": ["error", "smart"],
-    "semi": ["never"],
+    "semi": ["error", "never"],
     "curly": ["error", "multi-line"],
     "linebreak-style": ["error", "unix"],
     "max-len": [
