Updates following API fixes
To jgclark.Filer,
jgclark.RepeatExtensions,
np.statistics,
and 2 support files.

--- a/package.json
+++ b/package.json
@@ -26,10 +26,16 @@
     "build:nmn.sweep": "rollup -c ./nmn.sweep/rollup.config.js",
     "build:nmn.Templates": "rollup -c ./nmn.Templates/rollup.config.js",
     "build:np.statistics": "rollup -c ./np.statistics/rollup.config.js",
+    "build:jgclark.DailyJournal": "rollup -c ./jgclark.DailyJournal/rollup.config.js",
+    "build:jgclark.Filer": "rollup -c ./jgclark.Filer/rollup.config.js",
+    "build:jgclark.RepeatExtensions": "rollup -c ./jgclark.RepeatExtensions/rollup.config.js",
     "build": "concurrently \"npm:build:*\"",
     "watch:nmn.sweep": "rollup -c ./nmn.sweep/rollup.config.js --watch",
     "watch:nmn.Templates": "rollup -c ./nmn.Templates/rollup.config.js --watch",
     "watch:np.statistics": "rollup -c ./np.statistics/rollup.config.js --watch",
+    "watch:jgclark.DailyJournal": "rollup -c ./jgclark.DailyJournal/rollup.config.js --watch",
+    "watch:jgclark.Filer": "rollup -c ./jgclark.Filer/rollup.config.js --watch",
+    "watch:jgclark.RepeatExtensions": "rollup -c ./jgclark.RepeatExtensions/rollup.config.js --watch",
     "watch": "concurrently \"npm:watch:*\"",
     "autowatch": "node scripts/rollup.js",
     "lint": "eslint .",
