--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "build:jgclark.Filer": "rollup -c ./jgclark.Filer/rollup.config.js",
     "build:jgclark.RepeatExtensions": "rollup -c ./jgclark.RepeatExtensions/rollup.config.js",
     "build:jgclark.CalendarHelpers": "rollup -c ./jgclark.CalendarHelpers/rollup.config.js",
+    "build:jgclark.QuickCapture": "rollup -c ./jgclark.QuickCapture/rollup.config.js",
     "build": "concurrently \"npm:build:*\"",
     "watch:nmn.sweep": "rollup -c ./nmn.sweep/rollup.config.js --watch",
     "watch:nmn.Templates": "rollup -c ./nmn.Templates/rollup.config.js --watch",
@@ -38,6 +39,7 @@
     "watch:jgclark.Filer": "rollup -c ./jgclark.Filer/rollup.config.js --watch",
     "watch:jgclark.RepeatExtensions": "rollup -c ./jgclark.RepeatExtensions/rollup.config.js --watch",
     "watch:jgclark.CalendarHelpers": "rollup -c ./jgclark.CalendarHelpers/rollup.config.js --watch",
+    "watch:jgclark.QuickCapture": "rollup -c ./jgclark.QuickCapture/rollup.config.js --watch",
     "watch": "concurrently \"npm:watch:*\"",
     "autowatch": "node scripts/rollup.js",
     "lint": "eslint .",
