Trying to close off Template PR #11

--- a/package.json
+++ b/package.json
@@ -29,6 +29,10 @@
     "build:jgclark.DailyJournal": "rollup -c ./jgclark.DailyJournal/rollup.config.js",
     "build:jgclark.Filer": "rollup -c ./jgclark.Filer/rollup.config.js",
     "build:jgclark.RepeatExtensions": "rollup -c ./jgclark.RepeatExtensions/rollup.config.js",
+    "build:jgclark.CalendarHelpers": "rollup -c ./jgclark.CalendarHelpers/rollup.config.js",
+    "build:jgclark.QuickCapture": "rollup -c ./jgclark.QuickCapture/rollup.config.js",
+    "build:jgclark.NoteHelpers": "rollup -c ./jgclark.NoteHelpers/rollup.config.js",
+    "build:jgclark.GTD": "rollup -c ./jgclark.GTD/rollup.config.js",
     "build": "concurrently \"npm:build:*\"",
     "watch:nmn.sweep": "rollup -c ./nmn.sweep/rollup.config.js --watch",
     "watch:nmn.Templates": "rollup -c ./nmn.Templates/rollup.config.js --watch",
@@ -36,6 +40,10 @@
     "watch:jgclark.DailyJournal": "rollup -c ./jgclark.DailyJournal/rollup.config.js --watch",
     "watch:jgclark.Filer": "rollup -c ./jgclark.Filer/rollup.config.js --watch",
     "watch:jgclark.RepeatExtensions": "rollup -c ./jgclark.RepeatExtensions/rollup.config.js --watch",
+    "watch:jgclark.CalendarHelpers": "rollup -c ./jgclark.CalendarHelpers/rollup.config.js --watch",
+    "watch:jgclark.QuickCapture": "rollup -c ./jgclark.QuickCapture/rollup.config.js --watch",
+    "watch:jgclark.NoteHelpers": "rollup -c ./jgclark.NoteHelpers/rollup.config.js --watch",
+    "watch:jgclark.GTD": "rollup -c ./jgclark.GTD/rollup.config.js --watch",
     "watch": "concurrently \"npm:watch:*\"",
     "autowatch": "node scripts/rollup.js",
     "lint": "eslint .",
