--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,9 @@
 {
-  "presets": ["@babel/flow"]
+  "presets": [
+    "@babel/flow", 
+    [
+      "@babel/preset-env",
+      { "targets": { "safari": "11" } }
+    ]
+  ]
 }
