--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@babel/cli": "^7.13.16",
     "@babel/core": "^7.14.2",
     "@babel/eslint-parser": "^7.14.3",
+    "@babel/preset-env": "^7.14.7",
     "@babel/preset-flow": "^7.13.13",
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^19.0.0",
@@ -20,31 +21,10 @@
     "mkdirp": "^1.0.4",
     "prettier": "^2.3.0",
     "rollup": "^2.48.0",
+    "rollup-plugin-terser": "^7.0.2",
     "simple-input": "^1.0.1"
   },
   "scripts": {
-    "build:nmn.sweep": "rollup -c ./nmn.sweep/rollup.config.js",
-    "build:nmn.Templates": "rollup -c ./nmn.Templates/rollup.config.js",
-    "build:np.statistics": "rollup -c ./np.statistics/rollup.config.js",
-    "build:jgclark.DailyJournal": "rollup -c ./jgclark.DailyJournal/rollup.config.js",
-    "build:jgclark.Filer": "rollup -c ./jgclark.Filer/rollup.config.js",
-    "build:jgclark.RepeatExtensions": "rollup -c ./jgclark.RepeatExtensions/rollup.config.js",
-    "build:jgclark.CalendarHelpers": "rollup -c ./jgclark.CalendarHelpers/rollup.config.js",
-    "build:jgclark.QuickCapture": "rollup -c ./jgclark.QuickCapture/rollup.config.js",
-    "build:jgclark.NoteHelpers": "rollup -c ./jgclark.NoteHelpers/rollup.config.js",
-    "build:jgclark.GTD": "rollup -c ./jgclark.GTD/rollup.config.js",
-    "build": "concurrently \"npm:build:*\"",
-    "watch:nmn.sweep": "rollup -c ./nmn.sweep/rollup.config.js --watch",
-    "watch:nmn.Templates": "rollup -c ./nmn.Templates/rollup.config.js --watch",
-    "watch:np.statistics": "rollup -c ./np.statistics/rollup.config.js --watch",
-    "watch:jgclark.DailyJournal": "rollup -c ./jgclark.DailyJournal/rollup.config.js --watch",
-    "watch:jgclark.Filer": "rollup -c ./jgclark.Filer/rollup.config.js --watch",
-    "watch:jgclark.RepeatExtensions": "rollup -c ./jgclark.RepeatExtensions/rollup.config.js --watch",
-    "watch:jgclark.CalendarHelpers": "rollup -c ./jgclark.CalendarHelpers/rollup.config.js --watch",
-    "watch:jgclark.QuickCapture": "rollup -c ./jgclark.QuickCapture/rollup.config.js --watch",
-    "watch:jgclark.NoteHelpers": "rollup -c ./jgclark.NoteHelpers/rollup.config.js --watch",
-    "watch:jgclark.GTD": "rollup -c ./jgclark.GTD/rollup.config.js --watch",
-    "watch": "concurrently \"npm:watch:*\"",
     "autowatch": "node scripts/rollup.js",
     "lint": "eslint .",
     "lint-fix": "eslint . --fix",
