--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@rollup/plugin-commonjs": "^19.0.0",
     "@rollup/plugin-node-resolve": "^13.0.0",
     "concurrently": "^6.2.0",
+    "documentation": "^13.2.5",
     "eslint": "^7.26.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-flowtype": "^5.7.2",
@@ -31,7 +32,8 @@
     "format": "prettier -w ./**/*.js ./**/**/*.js ./**/**/**/*.js",
     "typecheck": "flow check",
     "fix": "npm run lint-fix && npm run format",
-    "test": "npm run lint && npm run typecheck"
+    "test": "npm run lint && npm run typecheck",
+    "docs": "documentation build '*.js' -f md -o README-helperFunctions.md"
   },
   "prettier": {
     "printWidth": 80,
