Adding automatic release command for plugins
Requires, gh from the command line, which has to be configured once.

https://github.com/cli/cli#installation

e.g.:
  git -C /usr/local/Homebrew/Library/Taps/homebrew/homebrew-core fetch --unshallow
  git -C /usr/local/Homebrew/Library/Taps/homebrew/homebrew-cask fetch --unshallow
brew update
brew install gh
gh auth login
Github.com > HTTPS > Yes Credentials > Login with web browser
Enter (copy OTP code from command line)
[Paste OTP code in browser window]

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "scripts": {
     "autowatch": "node scripts/rollup.js",
+    "release": "node scripts/releases.js",
     "lint": "eslint .",
     "lint-fix": "eslint . --fix",
     "format": "prettier -w ./**/*.js ./**/**/*.js ./**/**/**/*.js",
