Adding debug mode for rollup
By default, for compatibility with older Macs, the plugins are transpiled into ES5 Javascript before they are copied to the Plugins folder. This works great, but if you want to try to debug in the Javascript debugger, the transpiled code won't match your code. So for Javascript debugging purposes, use this command instead:

- `npm run autowatch dwertheimer.TaskAutomations -- -debug`

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "singleQuote": true
   },
   "dependencies": {
+    "commander": "^8.1.0",
     "enquirer": "^2.3.6",
     "js-yaml": "^4.1.0",
     "json5": "^2.2.0",
