--- a/package.json
+++ b/package.json
@@ -1,7 +1,42 @@
 {
   "name": "np.plugins",
-  "main": "lib/script.src.js",
-  "version": "1.0.0",
+  "packageName": "noteplan-cli",
+  "info": "noteplan plugin development toolbox",
+  "version": "2.0.0",
+  "build": "23",
+  "description": "noteplan-cli",
+  "repository": "https://github.com/NotePlan/plugins",
+  "contributors": [
+    {
+      "name": "Eduard Metzger",
+      "email": "info@noteplan.co",
+      "url": "https://github.com/NotePlan"
+    },
+    {
+      "name": "David Wertheimer",
+      "url": "https://github.com/dwertheimer"
+    },
+    {
+      "name": "Jonathan Clark",
+      "url": "https://github.com/jgclark"
+    },
+    {
+      "name": "Mike Erickson",
+      "email": "codedungeon@gmail.com",
+      "url": "https://github.com/mikeerickson"
+    }
+  ],
+  "main": "index.js",
+  "bin": {
+    "noteplan-cli": "index.js"
+  },
+  "engines": {
+    "node": ">=12.15.0"
+  },
+  "keywords": [
+    "noteplan",
+    "plugins"
+  ],
   "devDependencies": {
     "@babel/cli": "^7.13.16",
     "@babel/core": "^7.14.2",
@@ -44,10 +79,13 @@
     "singleQuote": true
   },
   "dependencies": {
+    "@codedungeon/gunner": "0.62.0",
     "commander": "^8.1.0",
     "enquirer": "^2.3.6",
+    "findup-sync": "4.0.0",
     "js-yaml": "^4.1.0",
     "json5": "^2.2.0",
+    "strftime": "0.10.0",
     "toml": "^3.0.0"
   }
 }
