Adding @nmn - credit where credit is due!

--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
       "url": "https://github.com/jgclark"
     },
     {
+      "name": "Naman Goel",
+      "url": "https://github.com/nmn"
+    },
+    {
       "name": "David Wertheimer",
       "url": "https://github.com/dwertheimer"
     },
