--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "np.plugins",
   "packageName": "noteplan-cli",
   "info": "noteplan plugin development toolbox",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "build": "15",
   "description": "noteplan-cli",
   "repository": "https://github.com/NotePlan/plugins",
@@ -59,6 +59,7 @@
     "eslint-plugin-import": "^2.23.2",
     "flow-bin": "^0.151.0",
     "inquirer": "^8.1.0",
+    "jest": "27.0.6",
     "mkdirp": "^1.0.4",
     "prettier": "^2.3.0",
     "rollup": "^2.48.0",
@@ -67,6 +68,8 @@
   },
   "scripts": {
     "init": "node ./tasks/init.js",
+    "build": "node scripts/rollup.js --build",
+    "build:compact": "node scripts/rollup.js --build --compact",
     "autowatch": "node scripts/rollup.js",
     "autowatch:compact": "node scripts/rollup.js --compact",
     "release": "node scripts/releases.js",
@@ -76,6 +79,7 @@
     "typecheck": "flow check",
     "fix": "npm run lint-fix && npm run format",
     "test": "npm run lint && npm run typecheck",
+    "test:dev": "jest ./codedungeon.Toolbox",
     "docs": "documentation build '*.js' -f md -o README-helperFunctions.md"
   },
   "prettier": {
@@ -86,7 +90,7 @@
     "singleQuote": true
   },
   "dependencies": {
-    "@codedungeon/gunner": "0.67.0",
+    "@codedungeon/gunner": "0.68.0",
     "commander": "^8.1.0",
     "enquirer": "^2.3.6",
     "findup-sync": "4.0.0",
