[wip] reviewing various options

--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
   "dependencies": {
     "@codedungeon/gunner": "0.67.0",
     "commander": "^8.1.0",
+    "contentful-html-rich-text-converter": "1.0.9",
     "enquirer": "^2.3.6",
     "findup-sync": "4.0.0",
     "js-yaml": "^4.1.0",
