--- a/package.json
+++ b/package.json
@@ -90,10 +90,12 @@
     "@codedungeon/gunner": "0.67.0",
     "commander": "^8.1.0",
     "contentful-html-rich-text-converter": "1.0.9",
+    "date-fns": "^2.23.0",
     "enquirer": "^2.3.6",
     "findup-sync": "4.0.0",
     "js-yaml": "^4.1.0",
     "json5": "^2.2.0",
+    "lodash": "^4.17.21",
     "showdown": "1.9.1",
     "strftime": "0.10.0",
     "toml": "^3.0.0"
