--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "@babel/preset-flow": "^7.13.13",
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^19.0.0",
-    "@rollup/plugin-node-resolve": "^13.0.0",
+    "@rollup/plugin-json": "4.1.0",
+    "@rollup/plugin-node-resolve": "13.0.4",
     "concurrently": "^6.2.0",
     "eslint": "^7.26.0",
     "eslint-config-prettier": "^8.3.0",
@@ -98,6 +99,7 @@
   "dependencies": {
     "@codedungeon/gunner": "0.73.0",
     "@samverschueren/stream-to-observable": "0.3.1",
+    "axios": "0.21.4",
     "bcrypt": "5.0.1",
     "bump-regex": "4.1.0",
     "commander": "^8.1.0",
