--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@babel/preset-flow": "^7.13.13",
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^19.0.0",
+    "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "13.0.4",
     "concurrently": "^6.2.0",
     "documentation": "^13.2.5",
@@ -88,7 +89,6 @@
   },
   "dependencies": {
     "@codedungeon/gunner": "0.70.0",
-    "@rollup/plugin-json": "4.1.0",
     "commander": "^8.1.0",
     "contentful-html-rich-text-converter": "1.0.9",
     "date-fns": "^2.23.0",
