--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "flow-bin": "^0.151.0",
     "inquirer": "^8.1.0",
     "jest": "27.0.6",
+    "jest-spec-reporter": "1.0.17",
     "mkdirp": "^1.0.4",
     "prettier": "^2.3.0",
     "rollup": "^2.48.0",
@@ -106,12 +107,14 @@
     "contentful-html-rich-text-converter": "1.0.9",
     "date-fns": "2.23.0",
     "enquirer": "^2.3.6",
+    "eta": "1.12.3",
     "findup-sync": "4.0.0",
     "git-state": "4.1.0",
     "js-yaml": "^4.1.0",
     "json5": "^2.2.0",
     "listr": "0.14.3",
     "lodash": "4.17.21",
+    "moment": "2.29.1",
     "progress": "2.0.3",
     "rxjs": "6.6.7",
     "showdown": "1.9.1",
