--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-flowtype": "^5.7.2",
     "eslint-plugin-import": "^2.23.2",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "flow-bin": "^0.151.0",
     "inquirer": "^8.1.0",
     "jest": "27.0.6",
