--- a/package.json
+++ b/package.json
@@ -54,10 +54,11 @@
     "@rollup/plugin-node-resolve": "13.0.4",
     "concurrently": "^6.2.0",
     "documentation": "^13.2.5",
-    "eslint": "^7.26.0",
+    "eslint": "^8.5.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-flowtype": "^5.7.2",
+    "eslint-plugin-flowtype": "^8.0.3",
     "eslint-plugin-import": "^2.23.2",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "flow-bin": "^0.151.0",
     "inquirer": "^8.1.0",
     "jest": "27.0.6",
