refactor: eslint versions - we cant use v8

--- a/.eslintrc
+++ b/.eslintrc
@@ -80,8 +80,6 @@
   },
   "ignorePatterns": [
     "node_modules",
-    "nmn.sweep/script.js",
-    "nmn.Templates/script.js",
-    "np.statistics/script.js"
+    "*/script.js"
   ]
 }
