--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
   },
   "dependencies": {
     "@codedungeon/gunner": "0.74.0",
+    "@rollup/plugin-alias": "3.1.8",
     "@samverschueren/stream-to-observable": "0.3.1",
     "axios": "0.21.4",
     "bcrypt": "5.0.1",
