--- a/.flowconfig
+++ b/.flowconfig
@@ -17,6 +17,7 @@ experimental.const_params=true
 module.use_strict=true
 suppress_type=$FlowFixMe
 suppress_type=$FlowTODO
+module.name_mapper='^@plugins' ->'<PROJECT_ROOT>'
 module.name_mapper='^@helpers' ->'<PROJECT_ROOT>/helpers'
 module.name_mapper='^NPTemplating' ->'<PROJECT_ROOT>/np.Templating/lib/NPTemplating'
 module.name_mapper='^TemplatingEngine' ->'<PROJECT_ROOT>/np.Templating/lib/TemplatingEngine'
