--- a/package.json
+++ b/package.json
@@ -85,7 +85,7 @@
     "typecheck": "flow check",
     "fix": "npm run lint-fix && npm run format",
     "test": "npm run lint && npm run typecheck",
-    "test:dev": "jest",
+    "test:dev": "jest --silent",
     "test:watch": "jest --watch",
     "security": "npm run security:high && npm run security:critical",
     "security:high": "npm audit | grep -B 1 -A 10 high",
