Second update to flow etc defns for 3.3.2

--- a/.eslintrc
+++ b/.eslintrc
@@ -74,8 +74,9 @@
     "CommandBar": true,
     "Calendar": true,
     "CalendarItem": true,
-    "globalThis": true,
     "Clipboard": true,
+    "NotePlan": true,
+    "globalThis": true,
     "fetch": true
   },
   "ignorePatterns": [
