refactor DateModule formatting to use new settings

--- a/.eslintrc
+++ b/.eslintrc
@@ -70,6 +70,7 @@
     "ParagaraphBridge": true,
     "Editor": true,
     "DataStore": true,
+    "NotePlan": true,
     "CommandBar": true,
     "Calendar": true,
     "CalendarItem": true,
