--- a/.eslintrc
+++ b/.eslintrc
@@ -10,7 +10,8 @@
   "plugins": [
     "import",
     "flowtype",
-    "unused-imports"
+    "unused-imports",
+    "no-floating-promise"
   ],
   "parser": "@babel/eslint-parser",
   "parserOptions": {
@@ -52,6 +53,7 @@
     ],
     "new-cap": "off",
     "no-case-declarations": "error",
+    "no-floating-promise/no-floating-promise": 2,
     "no-var": "error",
     "prefer-const": "error",
     "no-prototype-builtins": "off",
