Now ignore .history/* in flow checking

--- a/.flowconfig
+++ b/.flowconfig
@@ -2,6 +2,7 @@
 # removed to fix issue with flow reporting errors with non-typed modules
 # details here - https://github.com/facebook/flow/issues/6646#issuecomment-447272772
 # <PROJECT_ROOT>/node_modules/.*
+<PROJECT_ROOT>/.history/.*
 
 [include]
 
