--- a/.flowconfig
+++ b/.flowconfig
@@ -2,7 +2,6 @@
 # removed to fix issue with flow reporting errors with non-typed modules
 # details here - https://github.com/facebook/flow/issues/6646#issuecomment-447272772
 # <PROJECT_ROOT>/node_modules/.*
-<PROJECT_ROOT>/.history/.*
 
 [include]
 
@@ -18,6 +17,11 @@ experimental.const_params=true
 module.use_strict=true
 suppress_type=$FlowFixMe
 suppress_type=$FlowTODO
-
+module.name_mapper='^@plugins' ->'<PROJECT_ROOT>'
+module.name_mapper='^@helpers' ->'<PROJECT_ROOT>/helpers'
+module.name_mapper='^NPTemplating' ->'<PROJECT_ROOT>/np.Templating/lib/NPTemplating'
+module.name_mapper='^TemplatingEngine' ->'<PROJECT_ROOT>/np.Templating/lib/TemplatingEngine'
+module.name_mapper='^@templating' ->'<PROJECT_ROOT>/np.Templating/lib'
+module.name_mapper='^@templatingModules' ->'<PROJECT_ROOT>/np.Templating/lib/support/modules'
 
 [strict]
