added license field for main repo

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "packageName": "noteplan-cli",
   "info": "noteplan plugin development toolbox",
   "version": "3.0.0",
-  "build": "232",
+  "build": "233",
   "description": "noteplan-cli",
   "repository": "https://github.com/NotePlan/plugins",
   "contributors": [
@@ -30,6 +30,7 @@
       "url": "https://github.com/mikeerickson"
     }
   ],
+  "license": "MIT",
   "main": "index.js",
   "bin": {
     "noteplan-cli": "index.js",
