--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "packageName": "noteplan-cli",
   "info": "noteplan plugin development toolbox",
   "version": "3.0.0",
-  "build": "233",
+  "build": "234",
   "description": "noteplan-cli",
   "repository": "https://github.com/NotePlan/plugins",
   "contributors": [
@@ -66,7 +66,7 @@
     "eslint-plugin-import": "^2.23.2",
     "flow-bin": "^0.151.0",
     "inquirer": "^8.1.0",
-    "jest": "27.0.6",
+    "jest": "27.5.1",
     "jest-spec-reporter": "1.0.17",
     "mkdirp": "^1.0.4",
     "prettier": "^2.3.0",
@@ -87,8 +87,8 @@
     "typecheck": "flow check",
     "fix": "npm run lint-fix && npm run format",
     "test": "npm run lint && npm run typecheck",
-    "test:dev": "jest --silent",
-    "test:watch": "jest --watch",
+    "test:dev": "jest --silent --verbose false",
+    "test:watch": "jest --watch --verbose false",
     "security": "npm run security:high && npm run security:critical",
     "security:high": "npm audit | grep -B 1 -A 10 high",
     "security:critical": "npm audit | grep -B 1 -A 10 critical",
