--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "np.plugins",
   "packageName": "noteplan-cli",
   "info": "noteplan plugin development toolbox",
-  "version": "3.1.0",
-  "build": "236",
+  "version": "3.1.1",
+  "build": "242",
   "description": "noteplan-cli",
   "repository": "https://github.com/NotePlan/plugins",
   "contributors": [
@@ -64,6 +64,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-flowtype": "^5.7.2",
     "eslint-plugin-import": "^2.23.2",
+    "eslint-plugin-unused-imports": "1.1.5",
     "flow-bin": "^0.151.0",
     "inquirer": "^8.1.0",
     "jest": "27.5.1",
@@ -113,7 +114,7 @@
     "clipboardy": "3.0.0",
     "commander": "^8.1.0",
     "contentful-html-rich-text-converter": "1.0.9",
-    "date-fns": "2.23.0",
+    "date-fns": "^2.23.0",
     "dayjs": "1.10.6",
     "enquirer": "^2.3.6",
     "findup-sync": "4.0.0",
