changed test:dev, test:watch scripts

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "np.plugins",
   "packageName": "noteplan-cli",
   "info": "noteplan plugin development toolbox",
-  "version": "3.2.0",
+  "version": "3.2.1",
   "build": "245",
   "description": "noteplan-cli",
   "repository": "https://github.com/NotePlan/plugins",
@@ -88,8 +88,8 @@
     "typecheck": "flow check",
     "fix": "npm run lint-fix && npm run format",
     "test": "npm run lint && npm run typecheck",
-    "test:dev": "jest --verbose false",
-    "test:watch": "jest --watch --verbose false",
+    "test:dev": "jest",
+    "test:watch": "jest --watch",
     "security": "npm run security:high && npm run security:critical",
     "security:high": "npm audit | grep -B 1 -A 10 high",
     "security:critical": "npm audit | grep -B 1 -A 10 critical",
