--- a/package.json
+++ b/package.json
@@ -110,6 +110,9 @@
     "@samverschueren/stream-to-observable": "0.3.1",
     "axios": "0.21.4",
     "bcrypt": "5.0.1",
+    "boolean-expressions": "^1.1.1",
+    "boon-js": "^2.0.3",
+    "bqpjs": "^0.1.1",
     "bump-regex": "4.1.0",
     "clipboardy": "3.0.0",
     "commander": "^8.1.0",
@@ -117,8 +120,10 @@
     "date-fns": "^2.23.0",
     "dayjs": "1.10.6",
     "enquirer": "^2.3.6",
+    "expressionparser": "^1.1.5",
     "findup-sync": "4.0.0",
     "front-matter": "4.0.2",
+    "fuse.js": "^6.5.3",
     "git-state": "4.1.0",
     "js-yaml": "^4.1.0",
     "json5": "^2.2.0",
