--- a/package.json
+++ b/package.json
@@ -126,6 +126,8 @@
     "json5": "^2.2.0",
     "listr": "0.14.3",
     "lodash": "4.17.21",
+    "luxon": "^2.4.0",
+    "luxon-business-days": "^2.8.3",
     "moment": "2.29.1",
     "moment-business-days": "1.2.0",
     "node-libcurl": "2.3.3",
