--- a/package.json
+++ b/package.json
@@ -95,7 +95,7 @@
     "security:critical": "npm audit | grep -B 1 -A 10 critical",
     "dev": "node ./tasks/start.js",
     "start": "node ./tasks/start.js",
-    "docs": "documentation build '*.js' -f md -o README-helperFunctions.md"
+    "docs": "documentation build helpers/*.js flow-typed/Noteplan.js --sort-order=alpha --project-name=\"NotePlan API+@helpers shared files\" --project-description=\"An attempt to help find @helper functions\" --project-homepage \"https://help.noteplan.co/article/70-javascript-plugin-api\" -f html -o \"Documentation-Helpers\""
   },
   "prettier": {
     "printWidth": 180,
@@ -117,6 +117,7 @@
     "contentful-html-rich-text-converter": "1.0.9",
     "date-fns": "^2.23.0",
     "dayjs": "1.10.6",
+    "documentation": "^13.2.5",
     "enquirer": "^2.3.6",
     "findup-sync": "4.0.0",
     "front-matter": "4.0.2",
