--- a/.eslintrc
+++ b/.eslintrc
@@ -57,12 +57,12 @@
     "no-var": "error",
     "prefer-const": "error",
     "no-prototype-builtins": "off",
-    "no-unused-vars": "off",
+    "no-unused-vars": "error",
     "import/order": "error",
     "no-useless-escape": "off",
     "require-await": "error",
     "unused-imports/no-unused-imports": "error",
-    "unused-imports/no-unused-vars": "off"
+    "unused-imports/no-unused-vars": "error"
   },
   "env": {
     "node": true,
