--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
     "@babel/cli": "^7.13.16",
     "@babel/core": "^7.14.2",
     "@babel/eslint-parser": "^7.14.3",
+    "@babel/generator": "^7.18.2",
+    "@babel/parser": "^7.18.4",
     "@babel/preset-env": "^7.14.7",
     "@babel/preset-flow": "^7.13.13",
     "@rollup/plugin-babel": "^5.3.0",
@@ -98,7 +100,7 @@
     "docs": "documentation build helpers/*.js flow-typed/Noteplan.js --sort-order=alpha --project-name=\"NotePlan API+@helpers shared files\" --project-description=\"An attempt to help find @helper functions\" --project-homepage \"https://help.noteplan.co/article/70-javascript-plugin-api\" -f html -o \"Documentation-Helpers\""
   },
   "prettier": {
-    "printWidth": 180,
+    "printWidth": 120,
     "parser": "flow",
     "semi": false,
     "trailingComma": "all",
