--- a/.flowconfig
+++ b/.flowconfig
@@ -19,6 +19,7 @@ suppress_type=$FlowFixMe
 suppress_type=$FlowTODO
 module.name_mapper='^@plugins' ->'<PROJECT_ROOT>'
 module.name_mapper='^@helpers' ->'<PROJECT_ROOT>/helpers'
+module.name_mapper='^@mocks' ->'<PROJECT_ROOT>/__mocks__'
 module.name_mapper='^NPTemplating' ->'<PROJECT_ROOT>/np.Templating/lib/NPTemplating'
 module.name_mapper='^TemplatingEngine' ->'<PROJECT_ROOT>/np.Templating/lib/TemplatingEngine'
 module.name_mapper='^@templating' ->'<PROJECT_ROOT>/np.Templating/lib'
