--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-flowtype": "^5.7.2",
     "eslint-plugin-import": "^2.23.2",
+    "eslint-plugin-no-floating-promise": "^1.0.2",
     "eslint-plugin-unused-imports": "1.1.5",
     "flow-bin": "^0.179.0",
     "inquirer": "^8.1.0",
