--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "concurrently": "^6.2.0",
     "eslint": "^7.26.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-flowtype": "^5.7.2",
     "eslint-plugin-import": "^2.23.2",
     "eslint-plugin-no-floating-promise": "^1.0.2",
