core update 3.10.1, fix lint errors, updated helpers, upate np.plugin-flow-skeleton

--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "np.plugins",
   "packageName": "noteplan-cli",
   "info": "noteplan plugin development toolbox",
-  "version": "3.10.0",
-  "build": "031000",
+  "version": "3.10.1",
+  "build": "031001",
   "description": "noteplan-cli",
   "repository": "https://github.com/NotePlan/plugins",
   "contributors": [
@@ -91,9 +91,9 @@
     "format": "prettier -w ./**/*.js ./**/**/*.js ./**/**/**/*.js",
     "typecheck": "flow check",
     "fix": "npm run lint-fix && npm run format",
-    "test": "npm run lint && npm run typecheck",
-    "test:dev": "jest",
-    "test:watch": "jest --watch",
+    "test": "npm run lint && npm run typecheck && run test:dev",
+    "test:dev": "./node_modules/.bin/jest ./**/__tests__/*.test.js --silent",
+    "test:watch": "./node_modules/.bin/jest ./**/__tests__/*.test.js --silent --watchAll",
     "security": "npm run security:high && npm run security:critical",
     "security:high": "npm audit | grep -B 1 -A 10 high",
     "security:critical": "npm audit | grep -B 1 -A 10 critical",
